--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/data.js" defer></script>
+    <script src="/js/helpers.js" defer></script>
     <script src="/js/index.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="/css/style.css">
     <title>Dynamisk web øvelse</title>
 </head>
 
